ARM: pxa: add Kconfig dependencies for ATAGS based boards
Most of the traditional board files are no longer used by anyone and
will be removed next year, while the DT based machine support remains.

Adding a CONFIG_ATAGS dependency around all the board files means
that they now actaully get disabled when ATAGS support is left out,
and the individual boards that have no known users are marked
as depending on CONFIG_UNUSED_BOARD_FILES, with the plan to remove
them in early 2023 unless someone else shows interest.

Laurence de Bruxelles intends to work on converting the Spitz/Akita/Borzoi
family of Sharp Zaurus SL machines to DT, to make that easier those
remain for the moment.

In addition, the "Gumstix" machine is the one that is supported in
qemu with 256MB of RAM, which makes it particularly nice for testing,
I'm leaving it in hoping that someone can take care of converting it to
DT as well.

Finally, Marc Zyngier is still able to test the Zeus and Viper machines,
so these could be saved as well if anyone wants to conver them to DT.
This seems less likely, so I'm marking them as unused for the time being.

For the defconfig files, both the pxa3xx_defconfig and pxa_defconfig
now only enable the boards that are not marked as unused, while all the
other ones explicitly enable CONFIG_UNUSED_BOARD_FILES to still allow
building the kernels.

Cc: Robert Jarzmik <robert.jarzmik@free.fr>
Cc: Daniel Mack <daniel@zonque.org>
Cc: Laurence de Bruxelles <lfdebrux@gmail.com>
Acked-by: Marc Zyngier <maz@kernel.org>
Signed-off-by: Arnd Bergmann <arnd@arndb.de>

--- a/arch/arm/configs/cm_x300_defconfig
+++ b/arch/arm/configs/cm_x300_defconfig
@@ -12,6 +12,7 @@ CONFIG_ARCH_PXA=y
 CONFIG_MACH_CM_X300=y
 CONFIG_AEABI=y
 CONFIG_HIGHMEM=y
+CONFIG_UNUSED_BOARD_FILES=y
 CONFIG_CMDLINE="root=/dev/mtdblock5 rootfstype=ubifs console=ttyS2,38400"
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
