--- a/arch/arm/configs/eseries_pxa_defconfig
+++ b/arch/arm/configs/eseries_pxa_defconfig
@@ -8,6 +8,7 @@ CONFIG_ARCH_PXA=y
 CONFIG_ARCH_PXA_ESERIES=y
 CONFIG_IWMMXT=y
 CONFIG_AEABI=y
+CONFIG_UNUSED_BOARD_FILES=y
 CONFIG_KEXEC=y
 CONFIG_FPE_NWFPE=y
 CONFIG_MODULES=y
