ARM: davinci: mark all ATAGS board files as unused
From an earlier discussion, it appears that the davinci da8xx machines
that are still functional have already been converted to DT, while the
remaining board files are only kept because nobody has stepped up to
remove them.

Mark all these boards as 'depends on UNUSED_BOARD_FILES' with the
plan to remove them in early 2023 after the next longterm supported
kernel is out.

Cc: Sekhar Nori <nsekhar@ti.com>
Cc: Bartosz Golaszewski <brgl@bgdev.pl>
Signed-off-by: Arnd Bergmann <arnd@arndb.de>

--- a/arch/arm/mach-davinci/Kconfig
+++ b/arch/arm/mach-davinci/Kconfig
@@ -26,6 +26,7 @@ config ARCH_DAVINCI_DM644x
 
 config ARCH_DAVINCI_DM355
 	bool "DaVinci 355 based system"
+	depends on ATAGS && UNUSED_BOARD_FILES
 	select DAVINCI_AINTC
 	select ARCH_DAVINCI_DMx
 
@@ -37,6 +38,7 @@ config ARCH_DAVINCI_DM646x
 config ARCH_DAVINCI_DA830
 	bool "DA830/OMAP-L137/AM17x based system"
 	depends on !ARCH_DAVINCI_DMx || (AUTO_ZRELADDR && ARM_PATCH_PHYS_VIRT)
+	depends on ATAGS
 	select ARCH_DAVINCI_DA8XX
 	# needed on silicon revs 1.0, 1.1:
 	select CPU_DCACHE_WRITETHROUGH if !CPU_DCACHE_DISABLE
@@ -45,6 +47,7 @@ config ARCH_DAVINCI_DA830
 config ARCH_DAVINCI_DA850
 	bool "DA850/OMAP-L138/AM18x based system"
 	depends on !ARCH_DAVINCI_DMx || (AUTO_ZRELADDR && ARM_PATCH_PHYS_VIRT)
+	depends on ATAGS
 	select ARCH_DAVINCI_DA8XX
 	select DAVINCI_CP_INTC
 
@@ -53,6 +56,7 @@ config ARCH_DAVINCI_DA8XX
 
 config ARCH_DAVINCI_DM365
 	bool "DaVinci 365 based system"
+	depends on ATAGS && UNUSED_BOARD_FILES
 	select DAVINCI_AINTC
 	select ARCH_DAVINCI_DMx
 
@@ -127,6 +131,7 @@ config MACH_DAVINCI_DM365_EVM
 config MACH_DAVINCI_DA830_EVM
 	bool "TI DA830/OMAP-L137/AM17x Reference Platform"
 	default ARCH_DAVINCI_DA830
+	depends on ATAGS && UNUSED_BOARD_FILES
 	depends on ARCH_DAVINCI_DA830
 	select GPIO_PCF857X if I2C
 	help
@@ -156,6 +161,7 @@ endchoice
 
 config MACH_DAVINCI_DA850_EVM
 	bool "TI DA850/OMAP-L138/AM18x Reference Platform"
+	depends on ATAGS && UNUSED_BOARD_FILES
 	default ARCH_DAVINCI_DA850
 	depends on ARCH_DAVINCI_DA850
 	help
@@ -197,6 +203,7 @@ endchoice
 config MACH_MITYOMAPL138
 	bool "Critical Link MityDSP-L138/MityARM-1808 SoM"
 	depends on ARCH_DAVINCI_DA850
+	depends on ATAGS && UNUSED_BOARD_FILES
 	help
 	  Say Y here to select the Critical Link MityDSP-L138/MityARM-1808
 	  System on Module.  Information on this SoM may be found at
@@ -205,6 +212,7 @@ config MACH_MITYOMAPL138
 config MACH_OMAPL138_HAWKBOARD
 	bool "TI AM1808 / OMAPL-138 Hawkboard platform"
 	depends on ARCH_DAVINCI_DA850
+	depends on ATAGS && UNUSED_BOARD_FILES
 	help
 	  Say Y here to select the TI AM1808 / OMAPL-138 Hawkboard platform .
 
