ARM: mmp: mark all board files for removal
The mmp platform supports both ATAGS based board files and DT
booting, but it appears that nobody has been interested in
board files for a long time.

Mark all of them for removal in early 2023 with a dependency
on CONFIG_UNUSED_BOARD_FILES, leaving only the DT support
for the future, unless someone pops up who uses them.

Cc: Lubomir Rintel <lkundrak@v3.sk>
Cc: Haojian Zhuang <haojian.zhuang@linaro.org>
Signed-off-by: Arnd Bergmann <arnd@arndb.de>

--- a/arch/arm/configs/mmp2_defconfig
+++ b/arch/arm/configs/mmp2_defconfig
@@ -5,10 +5,8 @@ CONFIG_LOG_BUF_SHIFT=14
 CONFIG_SYSFS_DEPRECATED_V2=y
 # CONFIG_BLK_DEV_BSG is not set
 CONFIG_ARCH_MMP=y
-CONFIG_MACH_BROWNSTONE=y
-CONFIG_MACH_FLINT=y
-CONFIG_MACH_MARVELL_JASPER=y
 CONFIG_AEABI=y
+CONFIG_MACH_MMP2_DT=y
 CONFIG_CMDLINE="root=/dev/nfs rootfstype=nfs nfsroot=192.168.1.100:/nfsroot/ ip=192.168.1.101:192.168.1.100::255.255.255.0::eth0:on console=ttyS2,38400 mem=128M user_debug=255 earlyprintk"
 CONFIG_VFP=y
 CONFIG_MODULES=y
@@ -56,6 +54,7 @@ CONFIG_BACKLIGHT_MAX8925=y
 CONFIG_MMC=y
 CONFIG_RTC_CLASS=y
 CONFIG_RTC_DRV_MAX8925=y
+# CONFIG_RESET_CONTROLLER is not set
 CONFIG_EXT2_FS=y
 CONFIG_EXT3_FS=y
 CONFIG_EXT4_FS=y
