ARM: sa1100: mark most boards as unused
Most Arm board files are unused and will be removed in early
2023 if no remaining users show up. For the sa1100 platform,
the machines that are still in use are:

 - Russell's Assabet development board
 - Linus' H3600 iPaq PocketPC
 - Collie as the only qemu-supported board, to allow
   testing by others

All remaining sa1100 boards are marked to depend on
CONFIG_UNUSED_BOARD_FILES to give potential users a
last chance to speak up.

Cc: Kristoffer Ericson <kristoffer.ericson@gmail.com>
Cc: Russell King <linux@armlinux.org.uk>
Acked-by: Linus Walleij <linus.walleij@linaro.org>
Signed-off-by: Arnd Bergmann <arnd@arndb.de>

--- a/arch/arm/configs/cerfcube_defconfig
+++ b/arch/arm/configs/cerfcube_defconfig
@@ -4,6 +4,7 @@ CONFIG_LOG_BUF_SHIFT=14
 CONFIG_ARCH_SA1100=y
 CONFIG_SA1100_CERF=y
 CONFIG_SA1100_CERF_FLASH_16MB=y
+CONFIG_UNUSED_BOARD_FILES=y
 CONFIG_CMDLINE="console=ttySA0,38400 root=/dev/mtdblock3 rootfstype=jffs2 rw mem=32M init=/linuxrc"
 CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=m
