ARM: s3c: mark most board files as unused
The s3c24xx platform is already scheduled for removal in early 2023,
with s3c64xx meeting the same fate a year later.

Most of the s3c64xx board files appear to be unused, as the better
maintained ones already got converted to DT. The main exception is
the Wolfson Cragganmore board, which remains in use as the reference
design for Wolfson/Cirrus devices. As the other boards get removed,
this one stays around along with the DT based machines.

The s3c6400_defconfig file now disables the unused boards, while the
s3c24xx defconfig files all turn on CONFIG_UNUSED_BOARD_FILES to
remain usable.

Cc: Krzysztof Kozlowski <krzysztof.kozlowski@linaro.org>
Cc: Alim Akhtar <alim.akhtar@samsung.com>
Cc: linux-samsung-soc@vger.kernel.org
Signed-off-by: Arnd Bergmann <arnd@arndb.de>

--- a/arch/arm/configs/tct_hammer_defconfig
+++ b/arch/arm/configs/tct_hammer_defconfig
@@ -13,6 +13,7 @@ CONFIG_ARCH_MULTI_V4T=y
 # CONFIG_ARCH_MULTI_V7 is not set
 CONFIG_ARCH_S3C24XX=y
 CONFIG_MACH_TCT_HAMMER=y
+CONFIG_UNUSED_BOARD_FILES=y
 CONFIG_CMDLINE="mem=64M root=/dev/ram0 init=/linuxrc rw"
 CONFIG_FPE_NWFPE=y
 CONFIG_MODULES=y
