ARM: cns3xxx: add CONFIG_UNUSED_BOARD_FILES dependency
Krzysztof Halasa has kept the cns3xxx platform working for a long time
but has moved away from working on it. The OpenWRT port was dropped in
2020, and support for the Gateworks Laguna platform never made it into
the mainline kernel, which only supports the reference design.

Further, the ARM11MPCore has an unresolved issue with instruction cache
coherency, and removing support for the remaining platforms using this
core would be the easiest solution.

Mark the entire platform as unused now, to be removed in early 2023 if
no users show up.

Cc: Krzysztof Halasa <khalasa@piap.pl>
Link: https://lore.kernel.org/lkml/20210616152326.GG22278@shell.armlinux.org.uk/
Signed-off-by: Arnd Bergmann <arnd@arndb.de>

--- a/arch/arm/configs/cns3420vb_defconfig
+++ b/arch/arm/configs/cns3420vb_defconfig
@@ -12,6 +12,7 @@ CONFIG_PROFILING=y
 CONFIG_ARCH_MULTI_V6=y
 CONFIG_ARCH_CNS3XXX=y
 CONFIG_MACH_CNS3420VB=y
+CONFIG_UNUSED_BOARD_FILES=y
 CONFIG_CMDLINE="console=ttyS0,38400 mem=128M root=/dev/mmcblk0p1 ro rootwait"
 CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
