--- a/drivers/clocksource/Kconfig
+++ b/drivers/clocksource/Kconfig
@@ -158,7 +158,7 @@ config TEGRA_TIMER
 	  Enables support for the Tegra driver.
 
 config TEGRA186_TIMER
-	tristate "NVIDIA Tegra186 timer driver"
+	bool "NVIDIA Tegra186 timer driver"
 	depends on ARCH_TEGRA || COMPILE_TEST
 	depends on WATCHDOG && WATCHDOG_CORE
 	help
