ARM: iop32x: mark as unused
The iop32x platform has recently been converted to be part of
the multiplatform configuration, and it should be possible to
keep it alive for longer by making it boot from devicetree like
we did for the related ixp4xx platform.

However, it appears that no users remain at this point, so just
mark the entire platform depending on CONFIG_UNUSED_BOARD_FILES,
with the intention of removing it in early 2023.

If any users remain, please speak up now.

Cc: Lennert Buytenhek <buytenh@wantstofly.org>
Acked-by: Dan Williams <dan.j.williams@intel.com>
Signed-off-by: Arnd Bergmann <arnd@arndb.de>

--- a/arch/arm/configs/iop32x_defconfig
+++ b/arch/arm/configs/iop32x_defconfig
@@ -9,6 +9,7 @@ CONFIG_MACH_GLANTANK=y
 CONFIG_ARCH_IQ80321=y
 CONFIG_ARCH_IQ31244=y
 CONFIG_MACH_N2100=y
+CONFIG_UNUSED_BOARD_FILES=y
 CONFIG_CMDLINE="console=ttyS0,115200 root=/dev/nfs ip=bootp cachepolicy=writealloc"
 CONFIG_FPE_NWFPE=y
 CONFIG_BINFMT_AOUT=y
