--- a/drivers/platform/chrome/Kconfig
+++ b/drivers/platform/chrome/Kconfig
@@ -269,17 +269,11 @@ source "drivers/platform/chrome/wilco_ec/Kconfig"
 
 # Kunit test cases
 config CROS_KUNIT
-	tristate
-	help
-	  ChromeOS Kunit.
-
-config CROS_EC_PROTO_KUNIT_TEST
-	tristate "Kunit tests for ChromeOS EC protocol" if !KUNIT_ALL_TESTS
+	tristate "Kunit tests for ChromeOS" if !KUNIT_ALL_TESTS
 	depends on KUNIT && CROS_EC
 	default KUNIT_ALL_TESTS
 	select CROS_EC_PROTO
-	select CROS_KUNIT
 	help
-	  Kunit tests for the ChromeOS Embedded Controller protocol.
+	  ChromeOS Kunit tests.
 
 endif # CHROMEOS_PLATFORMS
