remoteproc: ast2600_ssp: Add support CM3 SSP
AST2600 integrates ARM CM3 as the secondary service processor.
This patch adds rproc/rpmsg driver support for the SSP.

Signed-off-by: Chia-Wei Wang <chiawei_wang@aspeedtech.com>
Change-Id: I0bfa3f892388ecc8a7209f3f08375bc07d85bb87

--- a/drivers/remoteproc/Kconfig
+++ b/drivers/remoteproc/Kconfig
@@ -315,6 +315,13 @@ config TI_K3_R5_REMOTEPROC
 	  It's safe to say N here if you're not interested in utilizing
 	  a slave processor.
 
+config AST2600_SSP
+	tristate "ASPEED AST2600 SSP remoteproc support"
+	depends on ARCH_ASPEED
+	help
+	  Say y here to support Aspeed AST2600 SSP via the
+	  remote processor framework.
+
 endif # REMOTEPROC
 
 endmenu
