--- a/arch/arm/boot/dts/aspeed-ast2600-evb.dts
+++ b/arch/arm/boot/dts/aspeed-ast2600-evb.dts
@@ -66,10 +66,16 @@
 		};
 
 		ssp_memory: ssp_memory {
-			size = <0x02000000>;
+			size = <0x04000000>;
 			alignment = <0x01000000>;
 			compatible = "shared-dma-pool";
 			no-map;
+
+			shm-size = <0x02000000>;
+			rsc-table-size = <0x1000>;
+			vdev0vring0-size = <0x1000>;
+			vdev0vring1-size = <0x1000>;
+			vdev0buffer-size = <0x1ffd000>;
 		};
 	};
 
