--- a/arch/m68k/Kconfig
+++ b/arch/m68k/Kconfig
@@ -33,6 +33,7 @@ config M68K
 	select HAVE_DEBUG_BUGVERBOSE
 	select HAVE_EFFICIENT_UNALIGNED_ACCESS if !CPU_HAS_NO_UNALIGNED
 	select HAVE_MOD_ARCH_SPECIFIC
+	select HAVE_LD_DEAD_CODE_DATA_ELIMINATION
 	select HAVE_UID16
 	select MMU_GATHER_NO_RANGE if MMU
 	select MODULES_USE_ELF_REL
