--- a/arch/m68k/mm/Makefile
+++ b/arch/m68k/mm/Makefile
@@ -9,4 +9,4 @@ obj-$(CONFIG_MMU)		+= cache.o fault.o
 obj-$(CONFIG_MMU_MOTOROLA)	+= kmap.o memory.o motorola.o hwtest.o
 obj-$(CONFIG_MMU_SUN3)		+= sun3kmap.o sun3mmu.o hwtest.o
 obj-$(CONFIG_MMU_COLDFIRE)	+= kmap.o memory.o mcfmmu.o
-
+obj-$(CONFIG_M68KCLASSIC)	+= hwtest.o
